# services/tripmate/v1/entities/request/auth/login.go
@@ -1,0 +1,6 @@
+package authrequest
+
+type Login struct {
+	Email    string `json:"email" binding:"required,email,max=255"`
+	Password string `json:"password" binding:"required,max=128"`
+}
